# AI-Agent-Learning

./: README.md  pyproject.toml
My-First-Agent/: Modelfile  gemini_first_api_call.py  ollama_ran.py  openai_first_call.py  openai_run.py
agent_python/: demo_asyncio.py  my_pydantic.py
llm_foundation/: call_gemini_model.py  sampling_params.py  tiktoken_calculator.py
python_for_agents/: oop_for_agent.py
python_for_agents/mini_llm_project/: call_gemini_model.py
